--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@mikro-orm/migrations": "^4.3.0",
     "@mikro-orm/postgresql": "^4.3.0",
     "@types/node": "^14.14.7",
+    "apollo-server-express": "^2.19.0",
     "dotenv": "^8.2.0",
-    "pg": "^8.5.1"
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "pg": "^8.5.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
@@ -30,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
