--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.0.27",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
+  },
   "dependencies": {
-    "@mikro-orm/cli": "^4.3.0",
-    "@mikro-orm/core": "^4.3.0",
-    "@mikro-orm/migrations": "^4.3.0",
-    "@mikro-orm/postgresql": "^4.3.0",
-    "@types/node": "^14.14.7",
-    "apollo-server-express": "^2.19.0",
+    "@mikro-orm/cli": "^4.0.0-alpha.0",
+    "@mikro-orm/core": "^4.0.0-alpha.0",
+    "@mikro-orm/migrations": "^4.0.0-alpha.0",
+    "@mikro-orm/postgresql": "^4.0.0-alpha.0",
+    "apollo-server-express": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql": "^15.4.0",
-    "pg": "^8.5.1",
-    "type-graphql": "^1.1.1"
+    "graphql": "^15.3.0",
+    "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.0.0-rc.3"
   },
   "mikro-orm": {
     "useTsNode": true,
@@ -32,11 +39,5 @@
       "./src/mikro-orm.config.ts",
       "./dist/mikro-orm.config.js"
     ]
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
   }
 }
