--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon dist/index.js",
     "startTs": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "devTs": "nodemon --exec ts-node src/index.ts",
-    "createdb:migration": "mikro-orm migration:create"
+    "devTs": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,10 +21,6 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.0.0-alpha.0",
-    "@mikro-orm/core": "^4.0.0-alpha.0",
-    "@mikro-orm/migrations": "^4.0.0-alpha.0",
-    "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.16.1",
     "bcryptjs": "^2.4.3",
@@ -34,13 +29,7 @@
     "graphql": "^15.3.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0-rc.3"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
+    "type-graphql": "^1.0.0-rc.3",
+    "typeorm": "^0.2.29"
   }
 }
