--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.7",
+    "@types/connect-redis": "0.0.15",
+    "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.0.27",
+    "@types/redis": "^2.8.28",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
@@ -24,11 +27,16 @@
     "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.16.1",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "jest": "^26.6.3",
     "pg": "^8.3.0",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "session": "^0.1.0",
     "type-graphql": "^1.0.0-rc.3",
     "typeorm": "^0.2.29"
   }
