--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "0.0.15",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.0.27",
